k8s/catalogo/catalogo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogo
spec:
  selector:
    matchLabels:
      app: af
      tier: catalogo
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: af
        tier: catalogo
    spec:
      containers:
      - name: catalogo
        image: smartcommunitylab/af-catalog:latest
        # resources:
        #   limits:
        #     cpu: "0.3"
        #     memory: "512Mi"
        #   requests:
        #     cpu: "0.1"
        #     memory: "128Mi"
        imagePullPolicy: "Always"
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 5
          successThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
