k8s/catalogo/catalogo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalogo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: catalogo.local
   http:
     paths:
     - path: /(.+)
       pathType: Prefix
       backend:
         service:
           name: catalogo
           port:
             number: 8080
